@@ -935,78 +935,6 @@ fix_filename(object pathname, char *filename1)
         if (*p=='\\') *p='/';
         p++;
     }
-    /* grok filename to have only '/' not '\',
-       fix up for cygnus:  /cygdrive/h/   becomes h:/
-       //h/ab and /h/ab become h:/ab
-       and
-       change h:a/b to check what the current directory
-       is on 'h:' and then prepend this to a/b
-       */  
-
-    if ( filename[0] == '/' &&
-         filename[1] == 'c' &&
-         strncmp ( filename, "/cygdrive/", 10 ) == 0 &&
-         filename[11] == '/' ) {
-        /* /cygdrive/... */
-        /*        fprintf ( stderr, "fix_filename: In cygdrive phase\n" );*/
-        filename[9]  = filename[10];
-        filename[10] = ':';
-        filename    += 9;
-    } else {
-        if ( filename[0]=='/' &&
-             filename[1]=='/' &&
-             filename[3]=='/' ) {
-            /* //h/... */
-            /*            fprintf ( stderr, "fix_filename: In // phase\n" );*/
-            filename[1] = filename[2];
-            filename[2] = ':';
-            filename   += 1;
-        } else {
-            if ( filename[0] == '/' &&
-                 filename[2] == '/' &&
-                 isalpha ( filename[1] ) ) {
-                /* /h/... */
-                /*                fprintf ( stderr, "fix_filename: In / phase\n" );*/
-                filename[0] = filename[1];
-                filename[1] = ':';
-            }
-        }
-    }
-
-    /* If the drive is just a letter with a colon eg "c:" or "c:hello.txt" it needs to
-     * be resolved to the current directory on that device */
-    if ( ( filename[1] == ':' ) && (( strlen ( filename ) == 2 ) || ( filename[2] != '/' ) ) ) {
-        char buf[4];
-        int len;
-        /*        fprintf ( stderr, "fix_filename: In current dir fixup phase\n" );*/
-        bcopy(filename,buf,2);
-        buf[2]='/';
-        buf[3]=0;
-        getwd(current_directory);
-        len = strlen ( current_directory );
-        strcpy ( directory, filename );
-        strncpy ( filename, current_directory, MAXPATHLEN-1 );
-        filename[len]='/';
-        filename[len+1]='\0';
-        strncat ( filename, directory+2, MAXPATHLEN - 2 - strlen ( current_directory ) );
-        filename [MAXPATHLEN-1] = '\0';
-        filename = filename1;
-        p = filename;
-        while ( *p ) {
-            if (*p=='\\') *p='/';
-            p++;
-        }
-    }
-
-    /* move the name back to beginning of buffer */
-    if ( filename > filename1 ) {
-        while ( *filename ) {
-	    *filename1++ = *filename++;
-        }
-        *filename1=0;
-    }
-    /*    fprintf ( stderr, "fix_filename: At end %s\n", filename1 );*/
-
 }
 
 
